--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "description": "Common assets and styles for the Auth0 Quickstart applications, based on Bootstrap",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "build": "node build.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/auth0-samples/samples-bootstrap-theme.git"
@@ -21,5 +23,22 @@
     "url": "https://github.com/auth0-samples/samples-bootstrap-theme/issues"
   },
   "homepage": "https://github.com/auth0-samples/samples-bootstrap-theme#readme",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@node-minify/clean-css": "^4.0.1",
+    "@node-minify/core": "^4.0.1",
+    "bootstrap": "^4.1.3",
+    "css-loader": "^2.0.0",
+    "eslint": "^5.10.0",
+    "humanize": "0.0.9",
+    "jquery-slim": "^3.0.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "mkdirp": "^0.5.1",
+    "node-sass": "^4.11.0",
+    "npm-run-all": "^4.1.5",
+    "popper.js": "^1.14.6",
+    "prettier-eslint": "^8.8.2",
+    "chalk": "^2.4.1"
+  },
+  "dependencies": {}
 }
