--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "samples-bootstrap-theme",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Common assets and styles for the Auth0 Quickstart applications, based on Bootstrap",
   "scripts": {
     "build": "node build/index.js",
@@ -31,6 +31,8 @@
   "private": true,
   "devDependencies": {
     "bootstrap": "^4.1.3",
+    "chalk": "^2.4.1",
+    "clean-css": "^4.2.1",
     "css-loader": "^2.0.0",
     "eslint": "^5.10.0",
     "humanize": "0.0.9",
@@ -39,12 +41,14 @@
     "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.5",
     "popper.js": "^1.14.6",
-    "prettier-eslint": "^8.8.2",
-    "chalk": "^2.4.1",
-    "clean-css": "^4.2.1"
+    "pre-commit": "^1.2.2",
+    "prettier-eslint": "^8.8.2"
   },
   "dependencies": {},
   "engines": {
     "node": ">= 7.6"
-  }
+  },
+  "pre-commit": [
+    "build"
+  ]
 }
