--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.17",
   "description": "Common assets and styles for the Auth0 Quickstart applications, based on Bootstrap",
   "scripts": {
-    "build": "node build/index.js",
+    "build": "gulp",
     "clean": "rm -rf dist",
     "rebuild": "npm run clean && npm run build"
   },
@@ -31,18 +31,16 @@
   "private": true,
   "devDependencies": {
     "bootstrap": "^4.1.3",
-    "chalk": "^2.4.1",
-    "clean-css": "^4.2.1",
-    "css-loader": "^2.0.0",
-    "eslint": "^5.10.0",
-    "humanize": "0.0.9",
+    "gulp": "^4.0.0",
+    "gulp-clean-css": "^4.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
     "jquery-slim": "^3.0.0",
-    "mkdirp": "^0.5.1",
     "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.5",
     "popper.js": "^1.14.6",
     "pre-commit": "^1.2.2",
-    "prettier-eslint": "^8.8.2"
+    "rimraf": "^2.6.3"
   },
   "dependencies": {},
   "engines": {
